--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ lxml
 beautifulsoup4
 requests
 sqlalchemy
-python-telegram-bot==12.8
+python-telegram-bot==13.5
 psycopg2-binary
 feedparser
 pynewtonmath
@@ -13,8 +13,8 @@ zalgo-text
 geopy
 nltk
 psutil
-aiohttp>=2.2.5
-Pillow>=4.2.0
+aiohttp
+Pillow
 CurrencyConverter
 #googletrans
 google_trans_new
@@ -45,3 +45,5 @@ youtube-search-python
 gtts
 pretty_errors
 tswift
+PyYAML
+humanize
