--- a/requirements.txt
+++ b/requirements.txt
@@ -13,19 +13,19 @@ zalgo-text
 geopy
 nltk
 psutil
-aiohttp
-Pillow
+aiohttp>=2.2.5
+Pillow>=4.2.0
 CurrencyConverter
 #googletrans
 google_trans_new
 jikanpy
 speedtest-cli
-coffeehouse
+coffeehouse==2.2.4
 regex
 bleach
 git+https://github.com/starry69/python-markdown2.git
 wikipedia
-telethon
+telethon==1.16.4
 spamwatch
 alphabet_detector
 pyrate-limiter
